--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1239,7 +1239,7 @@ a:focus {
 }
 
 body{
-  background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRTpvwQ__LKV_1iNOtYvDGzcIqkfs4xKydwYA8tTiVisY2Nmm38-NG7i_SojuWoJP2gd10&usqp=CAU');
+  background-image: url('https://static.wixstatic.com/media/cb77fc_10b5f88b2b604975b12fc105265ff111~mv2.jpg/v1/fill/w_497,h_373,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/46767521_301563600571447_859736812812238.jpg');
   background-size: cover;
   background-attachment: fixed;
 }
