--- a/templates/about.html
+++ b/templates/about.html
@@ -149,10 +149,18 @@
               </h2>
             </div>
             <p>
-              There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
-              in some form, by injected humour, or randomised words which don't look even slightly believable. If you
-              are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in
-              the middle of text. All
+מיזם נפשות פועל למען העלאת המודעות לתחום בריאות הנפש במרחב הציבורי באמצעות אירועי תרבות אמנות ושיח  
+ מיזם נפשות מקדם  עשייה משמעותית לאורך כל השנה, על מנת לשנות את השיח הקיים ולהעלות למודעות הציבורית את החשיבות בעיסוק בנושא. הן עבור האנשים החווים מצוקות נפשיות, הן עבור הסובבים אותם (בני משפחה וחברים), והן עבור כל אחת ואחד מאיתנו - כדי שנלמד להיות אמפתיים, לשתף ולפנות לקבל עזרה בעת משבר בלי בושה מהסטיגמה.
+
+ביוזמת “נפשות“, מתקיים מידי שנה "שבוע עושים נפשות" - שבוע שלם שבו אקטיביסטים בתחומי האומנות והנפש מייצרים מפגשים במרחב הציבורי התורמים להכרות של הציבור הרחב עם תחום בריאות הנפש ועם אנשים המתמודדים עם מצוקות בתחום זה. במהלך השבוע מתקיימים אירועים רבים ומגוונים, כולם ביוזמת ארגונים, מקומות ובעיקר אנשים שחברו למטרה: להעלות למודעות ציבורית בעיר את עולם בריאות הנפש, ולהפחית את הסטיגמה כלפי אנשים המתמודדים עם מצוקות נפשיות ובני משפחותיהם.
+
+​
+
+שבוע עושים נפשות החל כיוזמה ירושלמית ובשנתיים הראשונות האירועים התקיימו במרחב הציבורי בירושלים. בשנת 2020, בשל הריחוק החברתי וההגבלות סביב מגיפת הקורונה, התרחבה הפעילות מבחינה גיאוגרפית והאירועים היו בעיקר וירטואלים. קפיצה זו הובילה לכך שכיום שבוע עושים נפשות מתקיים   בפריסה ארצית עם מוקדים בצפון בדרום במרכז וכמובן בירושלים. 
+
+אנו מאמינים כי באמצעות מפגשים אנושיים המערבים אמנות, יצירה ושיח, ניתן יהיה להגיע ללבבות רבים. 
+
+אנו מאמינים כי העלאת המודעות לתחום בריאות הנפש היא אחריות של כולנו כלפי הקהילה בה אנו חיים, וכלפי הפרטים המרכיבים אותה.
             </p>
             <a href="">
               Read More
