--- a/templates/about.html
+++ b/templates/about.html
@@ -58,19 +58,13 @@
             <a href="">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>
-                Call : +01 123455678990
+                Call : 050-6242734
               </span>
             </a>
             <a href="">
               <i class="fa fa-envelope" aria-hidden="true"></i>
               <span>
-                Email : demo@gmail.com
-              </span>
-            </a>
-            <a href="">
-              <i class="fa fa-map-marker" aria-hidden="true"></i>
-              <span>
-                Location
+                Email : nefashotjr@gmail.com
               </span>
             </a>
           </div>
@@ -116,6 +110,18 @@
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="sign_in"> Login</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/sign_up"> signup</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/discuss"> Post</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/discuss"> {{email}}</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/post"> See Posts</a>
                 </li>
                 <form class="form-inline">
                   <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
