--- a/templates/index.html
+++ b/templates/index.html
@@ -110,6 +110,18 @@
                 <li class="nav-item">
                   <a class="nav-link" href="/sign_in"> Login</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/sign_up"> signup</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/discuss"> Post</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/discuss"> {{email}}</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/post"> See Posts</a>
+                </li>
                 <form class="form-inline">
                   <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
                     <i class="fa fa-search" aria-hidden="true"></i>
