--- a/templates/post.html
+++ b/templates/post.html
@@ -1,4 +1,57 @@
-{% for posts in post %}
-<img src = '{{posts["post"][upload]}}'>
-{{posts}}
+    <link rel="stylesheet" type="text/css" href="static/css/bootstrap.css" />
+	<link href="static/css/post.css" rel="stylesheet" />
+  <!-- responsive style -->
+  	<link href="static/css/responsive.css" rel="stylesheet" />
+
+
+
+      <div class="header_bottom">
+        <div class="container-fluid">
+          <nav class="navbar navbar-expand-lg custom_nav-container ">
+            </a>
+
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class=""> </span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav  ">
+                <li class="nav-item ">
+                  <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item active">
+                  <a class="nav-link" href="about.html"> About</a>
+                </li>
+
+                <li class="nav-item">
+                  <a class="nav-link" href="/contact">Contact Us</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="sign_in"> Login</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/sign_up"> signup</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/discuss"> Post</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/discuss"> {{email}}</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/post"> See Posts</a>
+                </li>
+                <form class="form-inline">
+                  <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
+                    <i class="fa fa-search" aria-hidden="true"></i>
+                  </button>
+                </form>
+              </ul>
+            </div>
+          </nav>
+        </div>
+      </div>
+{% for post in posts %}
+<img src = '{{posts[post]["upload"]}}' width="200px"><br>
+{{posts[post]["name"]}}<br>
 {%endfor%}
