--- a/templates/events.html
+++ b/templates/events.html
@@ -1,29 +1,28 @@
-    <link rel="stylesheet" type="text/css" href="static/css/bootstrap.css" />
+<!DOCTYPE html>
+<html>
+<head>
+
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="static/css/bootstrap.css" />
 	<link href="static/css/post.css" rel="stylesheet" />
-  <!-- responsive style -->
+	<title>Events</title>
+	<style type="text/css">
 
-
-<style>
 	html {
-  font-family: sans-serif;
-  line-height: 1.15;
-  -webkit-text-size-adjust: 100%;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  text-align: center;
-}
-
-h1{
-	margin-top: 100;
-}
-	.input{
-		margin: 30px;
+ 		font-family: sans-serif;
+  		line-height: 1.15;
+  		-webkit-text-size-adjust: 100%;
+  		-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  		text-align: center;
 	}
-
-.button{}
-
-
-</style>
-     <div class="header_bottom">
+	h1{
+		margin-top: 100;
+	}
+	</style>
+</head>
+<body>
+	     <div class="header_bottom">
         <div class="container-fluid">
           <nav class="navbar navbar-expand-lg custom_nav-container ">
             <a class="navbar-brand" href="index.html">
@@ -77,27 +76,17 @@ h1{
           </nav>
         </div>
       </div>
+	<h1 style=" text-align: center; ">מעניין אותך איזה אירועים מתקיימים במסגרת נפשות במהלך השנה? זה המקום! </h1>
 
-<h1>Post Your Art</h1>
-
-<p> Welcome to the discussion page where artists who has struggled with mental health can post their artwork. Other can view the artwork and get in contact with the artist and we hope this can spark some exciting discussions!</p>
-
-<form action ='/discuss' method = 'POST' enctype="multipart/form-data">
-	<label class="label"> Artists Name </label>
-	<br>
-	<input type = 'text' name = 'name' class="input"> </input>
-	<br>
-	<label class="label"> Upload Artwork </label>
-	<br>
-	<input type = 'text' name = 'upload' class="input"> </input>
-	<br>
-	<label class="label"> Write a Little About Yourself and Your Struggle with Mental Health </label>
-	<br>
-	<input type = 'text' name = 'about' class="input"> </input>
-	<br>
-	<label class="label"> Add Your Contacts to Spark Discussion! </label>
-	<br>
-	<input type = 'text' name = 'contact' class="input"> </input>
-	<br>
-	<input type = 'submit' name = 'submit' class="button"></input>
-</form>
+<p style=" text-align: center; ">רוצה לקבל את המידע בזמן? ממליצים להרשם לקבלת עדכונים - כאן 
+יום בריאות הנפש העולמי מצוין בכל שנה ב- 10.10.
+זוהי השנה השישית שמיזם נפשות והקהילה המופלאה שנבנתה סביבו,
+מציינים את היום הזה בשבוע שלם של אירועי תרבות, אמנות ושיח
+שמטרתם להעלות מודעות לתחום בריאות הנפש במרחב הציבורי.</p>
+ 
+<p style=" text-align: center; ">The tenth of October is World Mental Health Day.
+For the sixth consecutive year, Nefashot along with the community that has coalesced around it will mark this day with an entire week of cultural and artistic events and dialogue whose purpose is to raisethe public's awareness of mental health.</p>
+​
+<p style=" text-align: center; ">يتم الاحتفال باليوم العالمي للصحة النفسية في كل سنة بتاريخ ١٠/١٠. هذه السنة السادسة التي يحتفل بها مشروع "نِفَشوت" والمجتمع الرائع الذي بُنيَ حوله بهذا اليوم على مدار اسبوع كامل من الفعاليات الثقافية، الفنية، الخطاب والحوار الهادف لرفع الوعي لمجال الصحة النفسية في الحيز العام.</p>
+</body>
+</html>
