--- a/templates/signin.html
+++ b/templates/signin.html
@@ -4,7 +4,8 @@
   	<title>Login</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+  <link rel="stylesheet" type="text/css" href="static/css/bootstrap.css" />
+	<link href="static/css/post.css" rel="stylesheet" />
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet">
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -48,10 +49,10 @@
                   <a class="nav-link" href="/discuss"> Post</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/discuss"> {{email}}</a>
+                  <a class="nav-link" href="/post"> See Posts</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/post"> See Posts</a>
+                  <a class="nav-link" href="/events"> events</a>
                 </li>
                 <form class="form-inline">
                   <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
