--- a/templates/about.html
+++ b/templates/about.html
@@ -118,10 +118,10 @@
                   <a class="nav-link" href="/discuss"> Post</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/discuss"> {{email}}</a>
+                  <a class="nav-link" href="/post"> See Posts</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/post"> See Posts</a>
+                  <a class="nav-link" href="/events"> events</a>
                 </li>
                 <form class="form-inline">
                   <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
