--- a/templates/contact.html
+++ b/templates/contact.html
@@ -101,25 +101,25 @@
                   <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/about"> About</a>
+                  <a class="nav-link" href="/about"> About </a>
                 </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="/contact">Contact Us</a>
+                  <a class="nav-link" href="/contact">Contact Us </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/sign_in"> Login</a>
+                  <a class="nav-link" href="/sign_in"> Login </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/sign_up"> signup</a>
+                  <a class="nav-link" href="/sign_up"> signup </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/discuss"> Post</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/discuss"> {{email}}</a>
+                  <a class="nav-link" href="/discuss"> Post </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/post"> See Posts</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/events"> events</a>
                 </li>
                 <form class="form-inline">
                   <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
