--- a/templates/index.html
+++ b/templates/index.html
@@ -41,19 +41,6 @@
     <header class="header_section">
       <div class="header_top">
         <div class="container-fluid header_top_container">
-          <div class="lang_box dropdown">
-            <a href="#" title="Language" class="nav-link" data-toggle="dropdown" aria-expanded="true">
-              <img src="images/flag-uk.png" alt="flag" class=" " title="United Kingdom"> <i class="fa fa-angle-down " aria-hidden="true"></i>
-            </a>
-            <div class="dropdown-menu ">
-              <a href="#" class="dropdown-item">
-                <img src="images/flag-france.png" class="" alt="flag">
-              </a>
-            </div>
-            <span>
-              English
-            </span>
-          </div>
           <div class="contact_nav">
             <a href="">
               <i class="fa fa-phone" aria-hidden="true"></i>
@@ -66,20 +53,6 @@
               <span>
                 Email : nefashotjr@gmail.com
               </span>
-            </a>
-          </div>
-          <div class="social_box">
-            <a href="">
-              <i class="fa fa-facebook" aria-hidden="true"></i>
-            </a>
-            <a href="">
-              <i class="fa fa-twitter" aria-hidden="true"></i>
-            </a>
-            <a href="">
-              <i class="fa fa-linkedin" aria-hidden="true"></i>
-            </a>
-            <a href="">
-              <i class="fa fa-instagram" aria-hidden="true"></i>
             </a>
           </div>
         </div>
@@ -117,10 +90,10 @@
                   <a class="nav-link" href="/discuss"> Post</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/discuss"> {{email}}</a>
+                  <a class="nav-link" href="/post"> See Posts</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/post"> See Posts</a>
+                  <a class="nav-link" href="/events"> events</a>
                 </li>
                 <form class="form-inline">
                   <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
