--- a/templates/post.html
+++ b/templates/post.html
@@ -4,7 +4,6 @@
   	<link href="static/css/responsive.css" rel="stylesheet" />
 
 
-
       <div class="header_bottom">
         <div class="container-fluid">
           <nav class="navbar navbar-expand-lg custom_nav-container ">
@@ -35,11 +34,12 @@
                 <li class="nav-item">
                   <a class="nav-link" href="/discuss"> Post</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/discuss"> {{email}}</a>
-                </li>
+
                 <li class="nav-item">
                   <a class="nav-link" href="/post"> See Posts</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/events"> events</a>
                 </li>
                 <form class="form-inline">
                   <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
@@ -51,7 +51,9 @@
           </nav>
         </div>
       </div>
-{% for post in posts %}
-<img src = '{{posts[post]["upload"]}}' width="200px"><br>
-{{posts[post]["name"]}}<br>
-{%endfor%}
+    {%for pos in post%}
+        {%for i in post[pos]["posts"]%}
+            {{post[pos]["posts"][i]["name"]}}>\<br>
+            <img src = '{{post[pos]["posts"][i]["upload"]}}' width="200px"><br>
+        {% endfor %}
+    {% endfor %}
