--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1244,3 +1244,12 @@ body{
   background-attachment: fixed;
 }
 /*# sourceMappingURL=style.css.map */
+<style>
+
+  #hebrew{
+    color: white;
+
+<style>
+
+  #hebrew{
+    color: white;
