--- a/templates/about.html
+++ b/templates/about.html
@@ -12,8 +12,39 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
+<script src="custom.js"></script>
+<script> 
+  function arabic(){
+  document.getElementById('hebrew').innerHTML = "\
+يعمل مشروع نيفاشوت على نشر الوعي بمجال الصحة النفسية في المجال العام من خلال الأحداث الثقافية والفن والخطاب. ويشجع مشروع نيفاشوت على اتخاذ إجراءات مهمة على مدار العام ، من أجل تغيير الخطاب الحالي وزيادة الوعي العام بأهمية التعامل مع المعضلة. لكل من الأشخاص الذين يعانون من مشاكل نفسية ، سواء بالنسبة لمن حولهم (أفراد الأسرة والأصدقاء) ، ولكل واحد منا - حتى نتعلم كيف نتصرف ونشارك ونطلب المساعدة في أوقات الأزمات دون أن نخجل من وصمه عار.\";\
+\
+بمبادرة من نفشوت يقام أسبوع صنع النفوس كل عام - أسبوع كامل يقوم فيه النشطاء في مجالات الفن والروح بخلق لقاءات في المجال العام تساهم فيه.\
+ من اجل توعية الجمهور بمجال الصحة النفسية والأشخاص الذين يواجهون صعوبات في هذا المجال. تقام خلال الأسبوع العديد من الفعاليات المتنوعة ، كل ذلك بمبادرة من المنظمات والأماكن وخاصة الأشخاص الذين يشاركوننا  في اهداف متشابهه :\
+ رفع مستوى الوعي العام في عالم الصحة النفسية ، وتقليل وصمة العار تجاه الأشخاص الذين يتعاملون مع الأمراض العقلية.\";\
+\
+بدأ أسبوع صنع النفوس كمبادرة مقدسية ، وخلال العامين الأولين جرت الأحداث في منطقة عامة في القدس. في عام 2020 ، بسبب التباعد الاجتماعي والقيود حول الوباء\
+ جرت الأحداث في مكان عام خارجاً في القدس. في عام 2020 ، وبسبب التباعد الاجتماعي والقيود المحيطة بوباء كورونا ، توسع النشاط جغرافيا وكانت الأحداث في الغالب افتراضية. أدت هذه القفزة إلى حقيقة أن أسبوع نيفاشوت يقام اليوم في جميع أنحاء البلاد مع وجود مراكز في الشمال والجنوب والوسط وبالطبع في القدس.\
+نعتقد أنه من خلال المواجهات الإنسانية التي تنطوي على الفن والإبداع والخطاب ، سيكون من الممكن الوصول إلى قلوب كثيرة. نؤمن بأن نشر الوعي في مجال الصحة النفسية مسؤولية علينا جميعًا تجاه المجتمع الذي نعيش فيه وتجاه الأفراد الذين يتكونون منه.\";";
+
+}
+
+</script>
+
   <title>Fonicy</title>
 
+<style>
+
+  #hebrew{
+    color: white;
+    font-weight: bold;
+  background-color: black;
+  width: 500px;
+  border: 15px solid black;
+  padding: 10px;
+  margin: 20px;
+  border-radius: 12px;
+  }
+  </style>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="static/css/bootstrap.css" />
@@ -43,6 +74,7 @@
         <div class="container-fluid header_top_container">
           <div class="lang_box dropdown">
             <a href="#" title="Language" class="nav-link" data-toggle="dropdown" aria-expanded="true">
+              <button onclick = 'arabic()' > Arabic<button>
               <img src="images/flag-uk.png" alt="flag" class=" " title="United Kingdom"> <i class="fa fa-angle-down " aria-hidden="true"></i>
             </a>
             <div class="dropdown-menu ">
@@ -154,7 +186,7 @@
                 About Us
               </h2>
             </div>
-            <p>
+            <p id = "hebrew">
 מיזם נפשות פועל למען העלאת המודעות לתחום בריאות הנפש במרחב הציבורי באמצעות אירועי תרבות אמנות ושיח  
  מיזם נפשות מקדם  עשייה משמעותית לאורך כל השנה, על מנת לשנות את השיח הקיים ולהעלות למודעות הציבורית את החשיבות בעיסוק בנושא. הן עבור האנשים החווים מצוקות נפשיות, הן עבור הסובבים אותם (בני משפחה וחברים), והן עבור כל אחת ואחד מאיתנו - כדי שנלמד להיות אמפתיים, לשתף ולפנות לקבל עזרה בעת משבר בלי בושה מהסטיגמה.
 
