--- a/templates/discuss.html
+++ b/templates/discuss.html
@@ -4,7 +4,7 @@
 
 
 <style>
-	html {
+	/*html {
   font-family: sans-serif;
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
@@ -19,16 +19,97 @@ h1{
 		margin: 30px;
 	}
 
-.button{}
+.button{}*/
+     /* body {
+            font-family: sans-serif;
+            line-height: 1.15;
+            -webkit-text-size-adjust: 100%;
+            -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+            text-align: center;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh; /* Ensure the content fills the viewport */
+    body {
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: #fff;
+        color: #000;
+    }
+
+    .container {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .header-container {
+        text-align: center;
+        margin: 20px 0;
+    }
+
+    h1 {
+        margin: 0;
+        font-size: 30px;
+        font-weight: bold;
+    }
+
+    p {
+        margin: 10px 0;
+        font-size: 20px;
+        padding-right: 200px;
+        padding-left: 200px;
+            color: white;
+    font-weight: bold;
+  background-color: black;
+  width: 750px;
+  border: 15px solid black;
+  padding: 10px;
+  margin: 20px;
+  border-radius: 12px;
+  }
+    }
+
+    form {
+        background-color: #fff;
+        border: 1px solid #000;
+        border-radius: 10px;
+        padding: 20px;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+        max-width: 400px;
+    }
+
+    .label {
+        font-weight: bold;
+        margin-bottom: 5px;
+        display: block;
+    }
+
+    .input {
+        width: 100%;
+        padding: 8px;
+        border: 1px solid #000;
+        border-radius: 5px;
+        margin-bottom: 10px;
+    }
+
+    .button {
+        background-color: #000;
+        color: #fff;
+        border: none;
+        padding: 10px 20px;
+        border-radius: 5px;
+        cursor: pointer;
+    }
 
 
 </style>
      <div class="header_bottom">
         <div class="container-fluid">
           <nav class="navbar navbar-expand-lg custom_nav-container ">
-            <a class="navbar-brand" href="index.html">
-              <img src="images/logo.png" alt="">
-            </a>
             </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,7 +122,7 @@ h1{
                   <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="about.html"> About</a>
+                  <a class="nav-link" href="/about"> About</a>
                 </li>
 
                 <li class="nav-item">
@@ -77,7 +158,10 @@ h1{
           </nav>
         </div>
       </div>
-
+<br>
+<br>
+<br>
+<br>
 <h1>Post Your Art</h1>
 
 <p> Welcome to the discussion page where artists who has struggled with mental health can post their artwork. Other can view the artwork and get in contact with the artist and we hope this can spark some exciting discussions!</p>
